--- a/css/_base.scss
+++ b/css/_base.scss
@@ -19,4 +19,8 @@ body {
   font-size: 16px;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   margin: 0;
+  text-size-adjust: 100%; 
+  -ms-text-size-adjust: 100%; 
+  -moz-text-size-adjust: 100%; 
+  -webkit-text-size-adjust: 100%;
 }
